tests/bad/binary_expr.glaz
fn main() {
  _ = true + false;
  _ = true and (22 or "");
}
